Exposed more os/process/module functions to the C api and added more support helper functions

--- a/memflow-ffi/examples/c/Makefile
+++ b/memflow-ffi/examples/c/Makefile
@@ -13,11 +13,11 @@ phys_mem.out: phys_mem.o
 #os.out: os.o
 #	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
-#process_list.out: process_list.o
-#	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+process_list.out: process_list.o
+	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: all
-all: phys_mem.out os.out process_list.out
+all: phys_mem.out process_list.out
 
 .DEFAULT_GOAL := all
 
