--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -32,7 +32,7 @@ itertools = { version = "0.10", default-features = false }
 memmap = { version = "0.7", optional = true }
 hashbrown = "0.11"
 fixed-slice-vec = "0.8.0"
-cglue = { version = "0.1.1", default-features = false }
+cglue = { version = "0.1.1", git = "https://github.com/h33p/cglue.git", default-features = false }
 rangemap = { git = "https://github.com/h33p/rangemap" } # TODO: replaceme when merged
 
 # plugins
