Make benchmarks use plugin system, fix them, change up some caching options in win32, slightly standardise them by moving their parsing to memflow core, make dummy allocate modules

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -53,7 +53,7 @@ colored = "2.0"
 
 [features]
 default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles"]
-trace_mmu = [] # enables debug traces in the mmu (very verbose)
+#trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
