Reworked pointer to be properly sized again

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -26,6 +26,7 @@ smallvec = { version = "1.4", default-features = false }
 x86_64 = { version = "0.14.2", default-features = false }
 rand = { version = "0.8", optional = true }
 rand_xorshift = { version = "0.3", optional = true }
+num-traits = "0.2"
 bumpalo = { version = "3.6", features = ["collections"] }
 no-std-compat = { version = "0.4", features = ["alloc"] }
 itertools = { version = "0.10", default-features = false }
