--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -52,7 +52,7 @@ rayon = "1.3.1"
 colored = "2.0"
 
 [features]
-default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles"]
+default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles", "64_bit_mem"]
 #trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
@@ -60,6 +60,8 @@ serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
 plugins = ["libloading", "dirs", "goblin"]
 filemap = ["memmap"]
+64_bit_mem = []
+# 128_bit_mem = [] # use 128 bit addressing, is not exposed, because u128 is not FFI-safe, and there is no real-world arch that uses it yet.
 
 [[example]]
 name = "read_bench"
