--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,29 +12,33 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        flags: [--all-features, --no-default-features]
     steps:
       - uses: actions/checkout@v2
 
       - name: Build
-        run: cargo build --workspace --all-features --verbose
+        run: cargo build --workspace ${{ matrix.flags }} --verbose
 
       - name: Build examples
-        run: cargo build --workspace --all-features --examples --verbose
+        run: cargo build --workspace ${{ matrix.flags }} --examples --verbose
 
-  build-cross-aarch64:
+  build-cross-targets:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabi, i686-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: aarch64-unknown-linux-gnu
+          target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
+          args: --target ${{ matrix.target }} --workspace --all-features --verbose
             
   test:
     runs-on: ${{ matrix.os }}
@@ -55,27 +59,30 @@ jobs:
         run: cargo test --workspace --exclude memflow-derive --all-features --verbose
         if: runner.os != 'Linux'
 
-  test-cross-aarch64:
+  test-cross:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64-unknown-linux-gnu, i686-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          target: aarch64-unknown-linux-gnu
+          target: ${{ matrix.target }}
           override: true
       - name: Pre-build binaries (for inventory integration tests)
         uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: build
-          args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
+          args: --target ${{ matrix.target }} --workspace --all-features --verbose
       - name: Run all tests
         uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: test
-          args: --target aarch64-unknown-linux-gnu --workspace --all-features --verbose
+          args: --target ${{ matrix.target }} --workspace --all-features --verbose
 
   lint:
     runs-on: ubuntu-latest
