--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,9 @@ jobs:
   build-cross-targets:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabi, i686-unknown-linux-gnu]
+        target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -62,6 +63,7 @@ jobs:
   test-cross:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         target: [aarch64-unknown-linux-gnu, i686-unknown-linux-gnu]
     steps:
