--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           target: ${{ matrix.target }}
           override: true
       - name: Pre-build binaries (for inventory integration tests)
@@ -78,13 +78,13 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --target ${{ matrix.target }} --workspace --all-features --verbose
+          args: --target ${{ matrix.target }} --workspace --all-features --verbose --release
       - name: Run all tests
         uses: actions-rs/cargo@v1
         with:
           use-cross: true
           command: test
-          args: --target ${{ matrix.target }} --workspace --all-features --verbose
+          args: -Zdoctest-xcompile --target ${{ matrix.target }} --workspace --all-features --verbose --release
 
   lint:
     runs-on: ubuntu-latest
