--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -32,7 +32,7 @@ itertools = { version = "0.10", default-features = false }
 memmap = { version = "0.7", optional = true }
 hashbrown = "0.11"
 fixed-slice-vec = "0.8.0"
-cglue = { git = "https://github.com/h33p/cglue.git", version = "0.2.0", default-features = false }
+cglue = { git = "https://github.com/h33p/cglue.git", branch = "main", version = "0.2.0", default-features = false }
 rangemap = "0.1.13"
 
 # plugins
