--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -32,14 +32,14 @@ itertools = { version = "0.10", default-features = false }
 memmap = { version = "0.7", optional = true }
 hashbrown = "0.11"
 fixed-slice-vec = "0.8.0"
-cglue = { version = "0.2.0", default-features = false }
+cglue = { version = "0.2.0", git = "https://github.com/h33p/cglue", default-features = false }
 rangemap = "0.1.13"
 
 # plugins
 libloading = { version = "0.7", optional = true }
 dirs = { version = "3.0", optional = true }
 goblin = { version = "0.4", optional = true }
-abi_stable = { version = "0.10", optional = true }
+abi_stable = { version = "0.10", git = "https://github.com/rodrimati1992/abi_stable_crates", optional = true }
 
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "0.5", optional = true }
