--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -41,6 +41,7 @@ libloading = { version = "0.7", optional = true }
 dirs = { version = "3.0", optional = true }
 goblin = { version = "0.4", optional = true }
 abi_stable = { version = "0.10", git = "https://github.com/rodrimati1992/abi_stable_crates", optional = true }
+once_cell = { version = "1", optional = true }
 
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "0.5", optional = true }
@@ -60,7 +61,7 @@ dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
-plugins = ["libloading", "dirs", "goblin", "abi_stable", "cglue/layout_checks", "log/std"]
+plugins = ["libloading", "dirs", "goblin", "abi_stable", "cglue/layout_checks", "log/std", "once_cell"]
 filemap = ["memmap"]
 64_bit_mem = []
 # use 128 bit addressing.
