Fixed nostd builds

--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -16,8 +16,8 @@ panic = "abort"
 
 [dependencies]
 rlibc = "1.0.0"
-uefi = "0.8.0"
-uefi-services = "0.5.0"
+uefi = "0.13.0"
+uefi-services = { version = "0.10.0", git = "https://github.com/rust-osdev/uefi-rs" }
 log = "0.4"
 memflow = { path = "../memflow", default-features = false }
 memflow-win32 = { path = "../memflow-win32/", default-features = false, features = ["embed_offsets"] }
