--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -23,7 +23,7 @@ log = { version = "0.4", default-features = false }
 bitflags = "1.2"
 coarsetime = { version = "0.1", optional = true }
 smallvec = { version = "1.4", default-features = false }
-x86_64 = { version = "0.14.7", default-features = false }
+x86_64 = { version = "<= 0.14.6", default-features = false }
 rand = { version = "0.8", optional = true }
 rand_xorshift = { version = "0.3", optional = true }
 bumpalo = { version = "3.6", features = ["collections"] }
