--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -39,7 +39,7 @@ rangemap = "0.1.13"
 # plugins
 libloading = { version = "0.7", optional = true }
 dirs = { version = "4.0", optional = true }
-goblin = { version = "0.4", optional = true }
+goblin = { version = "0.4", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
 abi_stable = { version = "0.10", optional = true }
 once_cell = { version = "1", optional = true }
 
