Updated dependencies and replaced simple_logger with actively maintained alternative (simplelog)

--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -22,8 +22,8 @@ crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 memflow = { version = "0.1", path = "../memflow" }
-log = "0.4"
-simple_logger = "1.16"
+log = "^0.4.14"
+simplelog = "^0.11.1"
 
 [features]
 default = []
