--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -14,16 +14,16 @@ publish = false
 
 [dependencies]
 memflow = { path = "../memflow", features = ["dummy_mem"] }
-log = "0.4"
-rand = "0.8"
-rand_xorshift = "0.3"
+log = "^0.4.14"
+rand = "^0.8.4"
+rand_xorshift = "^0.3"
 
 # This branch provides throughput plots
 criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput" }
 
 [dev-dependencies]
 memflow = { path = "../memflow", features = ["dummy_mem", "plugins"] }
-simple_logger = "1.16"
+simplelog = "^0.11.1"
 
 [features]
 default = []
