--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -18,41 +18,41 @@ codecov = { repository = "github", branch = "master", service = "github" }
 
 [dependencies]
 memflow-derive = { version = "0.1", path = "../memflow-derive" }
-dataview = { version = "0.1", default-features = false }
-log = { version = "0.4", default-features = false }
-bitflags = "1.2"
-coarsetime = { version = "0.1", optional = true }
-smallvec = { version = "1.4", default-features = false }
+dataview = { version = "^0.1.2", default-features = false }
+log = { version = "^0.4.14", default-features = false }
+bitflags = "^1.3.2"
+coarsetime = { version = "^0.1.20", optional = true }
+smallvec = { version = "^1.7.0", default-features = false }
 x86_64 = { version = "<= 0.14.6", default-features = false }
-rand = { version = "0.8", optional = true }
-rand_xorshift = { version = "0.3", optional = true }
-bumpalo = { version = "3.6", features = ["collections"] }
-no-std-compat = { version = "0.4", features = ["alloc"] }
-itertools = { version = "0.10", default-features = false }
-memmap = { version = "0.7", optional = true }
-hashbrown = "0.11"
-fixed-slice-vec = "0.8.0"
+rand = { version = "^0.8.4", optional = true }
+rand_xorshift = { version = "^0.3", optional = true }
+bumpalo = { version = "^3.9.1", features = ["collections"] }
+no-std-compat = { version = "^0.4.1", features = ["alloc"] }
+itertools = { version = "^0.10.3", default-features = false }
+memmap = { version = "^0.7.0", optional = true }
+hashbrown = "^0.11.2"
+fixed-slice-vec = "^0.8.0"
 cglue = { version = ">=0.2.5", git = "https://github.com/h33p/cglue", branch = "main", default-features = false }
 #cglue = { path = "../../cglue/cglue", default-features = false }
-rangemap = "0.1.13"
+rangemap = "^0.1.14"
 
 # plugins
-libloading = { version = "0.7", optional = true }
-dirs = { version = "4.0", optional = true }
-goblin = { version = "0.4", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
-abi_stable = { version = "0.10", optional = true }
-once_cell = { version = "1", optional = true }
+libloading = { version = "^0.7.2", optional = true }
+dirs = { version = "^4.0.0", optional = true }
+goblin = { version = "^0.4.3", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+abi_stable = { version = "^0.10.3", optional = true }
+once_cell = { version = "^1.9", optional = true }
 
-serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
-toml = { version = "0.5", optional = true }
+serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
+toml = { version = "^0.5.8", optional = true }
 
 [dev-dependencies]
-rand = { version = "0.8" }
-rand_xorshift = "0.3"
-clap = "2.33"
-simple_logger = "1.16"
-rayon = "1.3.1"
-colored = "2.0"
+rand = { version = "^0.8.4" }
+rand_xorshift = "^0.3"
+clap = { version = "^3.0.5", features = ["cargo"] }
+simplelog = "^0.11.1"
+rayon = "^1.5.1"
+colored = "^2.0.0"
 
 [features]
 default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles", "64_bit_mem"]
