--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -39,10 +39,11 @@ rangemap = "^0.1.14"
 # plugins
 libloading = { version = "^0.7.2", optional = true }
 dirs = { version = "^4.0.0", optional = true }
-goblin = { version = "^0.4.3", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+pelite = { version = "0.9", optional = true, default-features = false }
 abi_stable = { version = "^0.10.3", optional = true }
 once_cell = { version = "^1.9", optional = true }
 
+goblin = { version = "^0.4.3", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
 serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "^0.5.8", optional = true }
 
@@ -55,15 +56,16 @@ rayon = "^1.5.1"
 colored = "^2.0.0"
 
 [features]
-default = ["std", "serde_derive", "plugins", "filemap", "memmapfiles", "64_bit_mem"]
+default = ["std", "serde_derive", "plugins", "os_helpers", "filemap", "memmapfiles", "64_bit_mem"]
 #trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
-plugins = ["libloading", "dirs", "goblin", "abi_stable", "cglue/layout_checks", "log/std", "once_cell"]
+plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell"]
 filemap = ["memmap"]
 64_bit_mem = []
+os_helpers = ["goblin", "pelite"]
 # use 128 bit addressing.
 # If 64_bit_mem is also enabled, 64-bit mode takes precedence.
 # This is because 128-bit mode is not necessary to date, and u128 is not FFI-safe.
