--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memflow-derive"
-version = "0.1.5"
+version = "0.2.0-beta1"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 description = "derive macros for the memflow physical memory introspection framework"
@@ -26,4 +26,4 @@ darling = "^0.13.1"
 proc-macro-crate = "^1.1"
 
 [dev-dependencies]
-memflow = { version = "0.1", path = "../memflow" }
+memflow = { path = "../memflow" }
