--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memflow-ffi"
-version = "0.1.5"
+version = "0.2.0-beta1"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 description = "C bindings for the memflow physical memory introspection framework"
@@ -21,7 +21,7 @@ name = "memflow_ffi"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
-memflow = { version = "0.1", path = "../memflow" }
+memflow = { path = "../memflow" }
 log = "^0.4.14"
 simplelog = "^0.11.1"
 
