--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -17,7 +17,7 @@ maintenance = { status = "actively-developed" }
 codecov = { repository = "github", branch = "master", service = "github" }
 
 [dependencies]
-memflow-derive = { path = "../memflow-derive" }
+memflow-derive = { version = "0.2.0-beta1", path = "../memflow-derive" }
 dataview = { version = "^0.1.2", default-features = false }
 log = { version = "^0.4.14", default-features = false }
 bitflags = "^1.3.2"
