--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -7,7 +7,7 @@ description = "benchmarks for the memflow physical memory introspection framewor
 readme = "README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-license-file = "../LICENSE"
+license = "MIT"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "memory-management", "os" ]
 publish = false
