--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/memflow"
 readme = "../README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-license-file = "../LICENSE"
+license = "MIT"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "memory-management", "os" ]
 
