--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -8,6 +8,7 @@ documentation = "https://docs.rs/memflow-derive"
 readme = "README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
+license-file = "../LICENSE"
 license = "MIT"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "memory-management", "os" ]
