--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -7,14 +7,13 @@ description = "benchmarks for the memflow physical memory introspection framewor
 readme = "README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-license-file = "../LICENSE"
 license = "MIT"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "memory-management", "os" ]
 publish = false
 
 [dependencies]
-memflow = { version = "0.2.0-beta1", path = "../memflow", features = ["dummy_mem"] }
+memflow = { version = "^0.2.0-beta", path = "../memflow", features = ["dummy_mem"] }
 log = "^0.4.14"
 rand = "^0.8.4"
 rand_xorshift = "^0.3"
@@ -23,7 +22,7 @@ rand_xorshift = "^0.3"
 criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput" }
 
 [dev-dependencies]
-memflow = { version = "0.2.0-beta1", path = "../memflow", features = ["dummy_mem", "plugins"] }
+memflow = { version = "^0.2.0-beta", path = "../memflow", features = ["dummy_mem", "plugins"] }
 simplelog = "^0.11.1"
 
 [features]
