--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memflow-ffi"
-version = "0.2.0-beta1"
+version = "0.2.0-beta2"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 description = "C bindings for the memflow physical memory introspection framework"
@@ -8,7 +8,6 @@ documentation = "https://docs.rs/memflow-ffi"
 readme = "README.md"
 homepage = "https://memflow.github.io"
 repository = "https://github.com/memflow/memflow"
-license-file = "../LICENSE"
 license = "MIT"
 keywords = [ "memflow", "introspection", "memory", "dma" ]
 categories = [ "api-bindings", "memory-management", "os" ]
@@ -22,7 +21,7 @@ name = "memflow_ffi"
 crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
-memflow = { version = "0.2.0-beta1", path = "../memflow" }
+memflow = { version = "^0.2.0-beta", path = "../memflow" }
 log = "^0.4.14"
 simplelog = "^0.11.1"
 
