Added missing functions in OS to retrieve kernel imports/exports and primary kernel module

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -92,6 +92,10 @@ name = "kernel_modules"
 path = "examples/kernel_modules.rs"
 
 [[example]]
+name = "kernel_exports"
+path = "examples/kernel_exports.rs"
+
+[[example]]
 name = "keyboard"
 path = "examples/keyboard.rs"
 
