Added documentation to virt_page_map_range function and wrappers and a example which retrieves kernel memory maps

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -96,6 +96,10 @@ name = "kernel_exports"
 path = "examples/kernel_exports.rs"
 
 [[example]]
+name = "kernel_maps"
+path = "examples/kernel_maps.rs"
+
+[[example]]
 name = "keyboard"
 path = "examples/keyboard.rs"
 
