--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -23,7 +23,7 @@ log = { version = "^0.4.14", default-features = false }
 bitflags = "^1.3.2"
 coarsetime = { version = "^0.1.20", optional = true }
 smallvec = { version = "^1.7.0", default-features = false }
-x86_64 = { version = "<= 0.14.6", default-features = false }
+x86_64 = { version = "0.14.8", default-features = false }
 rand = { version = "^0.8.4", optional = true }
 rand_xorshift = { version = "^0.3", optional = true }
 bumpalo = { version = "^3.9.1", features = ["collections"] }
@@ -43,7 +43,7 @@ pelite = { version = "0.9", optional = true, default-features = false, features 
 abi_stable = { version = "^0.10.3", optional = true }
 once_cell = { version = "^1.9", optional = true }
 
-goblin = { version = "^0.4.3", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+goblin = { version = "^0.5.1", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
 serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "^0.5.8", optional = true }
 
