--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -39,7 +39,7 @@ rangemap = "^1.0"
 libloading = { version = "^0.7.2", optional = true }
 dirs = { version = "^4.0.0", optional = true }
 # enable unsafe_alignment for now, this is UB, but the idea is to fix pelite in upstream
-pelite = { version = "0.9", optional = true, default-features = false, features = ["unsafe_alignment"] }
+pelite = { version = "=0.9.0", optional = true, default-features = false, features = ["unsafe_alignment"] }
 abi_stable = { version = "^0.10.3", optional = true }
 once_cell = { version = "^1.9", optional = true }
 
@@ -51,7 +51,7 @@ toml = { version = "^0.5.8", optional = true }
 rand = { version = "^0.8.4" }
 rand_xorshift = "^0.3"
 clap = { version = "^3.0.5", features = ["cargo"] }
-simplelog = "^0.11.1"
+simplelog = "^0.12.0"
 rayon = "^1.5.1"
 colored = "^2.0.0"
 
