--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -19,4 +19,4 @@ rlibc = "1.0.0"
 uefi = "0.14.0"
 uefi-services = "0.11.0"
 log = "0.4"
-memflow = { version = "0.2.0-beta1", path = "../memflow", default-features = false }
+memflow = { version = "^0.2.0-beta", path = "../memflow", default-features = false }
