--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -24,3 +24,6 @@ syn = "^1.0.85"
 quote = "^1.0.14"
 darling = "^0.13.1"
 proc-macro-crate = "^1.1"
+
+[dev-dependencies]
+memflow = { version = "0.2.0-beta6", path = "../memflow", features = ["dummy_mem"] }
