--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -16,7 +16,7 @@ panic = "abort"
 
 [dependencies]
 rlibc = "1.0.0"
-uefi = "0.14.0"
-uefi-services = "0.11.0"
-log = "0.4"
+uefi = "0.17.0"
+uefi-services = "0.14.0"
+log = "^0.4.14"
 memflow = { version = "^0.2.0-beta", path = "../memflow", default-features = false }
