--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
         flags: [--all-features, --no-default-features]
     steps:
       - uses: actions/checkout@v2
+      - name: Install rust 1.64.0
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.64.0
+          override: true
 
       - name: Build
         run: cargo build --workspace ${{ matrix.flags }} --verbose
@@ -30,9 +35,10 @@ jobs:
         target: [aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Install rust 1.64.0
+        uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.64.0
           target: ${{ matrix.target }}
           override: true
       - uses: actions-rs/cargo@v1
@@ -48,6 +54,11 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
+      - name: Install rust 1.64.0
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.64.0
+          override: true
 
       - name: Pre-build binaries (for inventory integration tests)
         run: cargo build --workspace --all-features --verbose
@@ -70,7 +81,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: 1.64.0
           target: ${{ matrix.target }}
           override: true
       - name: Pre-build binaries (for inventory integration tests)
@@ -90,13 +101,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: rustup component add clippy
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: 1.64.0
+          override: true
+          components: rustfmt, clippy
       - name: Check formatting
         run: cargo fmt -- --check
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-targets --all-features
+          args: --all-targets --all-features --workspace -- -D clippy:all
 
   build-nostd:
     runs-on: ${{ matrix.os }}
