--- a/nostd-test/Cargo.toml
+++ b/nostd-test/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nostd-test"
-version = "0.2.0-beta1"
+version = "0.2.0"
 authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 homepage = "https://memflow.github.io"
@@ -19,4 +19,4 @@ rlibc = "1.0.0"
 uefi = "0.26.0"
 uefi-services = "0.23.0"
 log = "^0.4.14"
-memflow = { version = "^0.2.0-beta", path = "../memflow", default-features = false }
+memflow = { version = "0.2", path = "../memflow", default-features = false }
