--- a/memflow-bench/Cargo.toml
+++ b/memflow-bench/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memflow-bench"
-version = "0.2.0-beta1"
+version = "0.2.0"
 authors = ["Aurimas Blažulionis <0x60@pm.me>", "ko1N <ko1N1337@gmail.com>"]
 edition = "2018"
 description = "benchmarks for the memflow physical memory introspection framework"
@@ -13,7 +13,7 @@ categories = [ "memory-management", "os" ]
 publish = false
 
 [dependencies]
-memflow = { version = "0.2.0-beta", path = "../memflow", features = ["dummy_mem"] }
+memflow = { version = "0.2", path = "../memflow", features = ["dummy_mem"] }
 log = "^0.4.14"
 rand = "^0.8.4"
 rand_xorshift = "^0.3"
@@ -22,7 +22,7 @@ rand_xorshift = "^0.3"
 criterion = { git = "https://github.com/h33p/criterion.rs.git", branch = "tput2" }
 
 [dev-dependencies]
-memflow = { version = "0.2.0-beta", path = "../memflow", features = ["dummy_mem", "plugins"] }
+memflow = { version = "0.2", path = "../memflow", features = ["dummy_mem", "plugins"] }
 simplelog = "^0.12.0"
 
 [features]
