--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "memflow-derive"
-version = "0.2.0-beta3"
+version = "0.2.0"
 authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
 edition = "2018"
 description = "derive macros for the memflow physical memory introspection framework"
@@ -26,4 +26,4 @@ darling = "^0.20"
 proc-macro-crate = "^2.0"
 
 [dev-dependencies]
-memflow = { version = "0.2.0-beta", path = "../memflow", features = ["dummy_mem"] }
+memflow = { version = "0.2", path = "../memflow", features = ["dummy_mem"] }
