Module helpers for MachO

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ default-members = [
 exclude = [
     "nostd-test"
 ]
+
+[patch.crates-io]
+goblin = { git = "https://github.com/h33p/goblin", branch = "lossy-macho" }
