--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -46,7 +46,8 @@ pelite = { version = "=0.9.0", optional = true, default-features = false, featur
 abi_stable = { version = "=0.10.3", optional = true }
 once_cell = { version = "^1.9", optional = true }
 
-goblin = { version = "0.8", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+# we need to stay on goblin 0.7 since this is what h33p's fork uses right now
+goblin = { version = "0.7", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
 serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "^0.8", optional = true }
 
