--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -46,15 +46,15 @@ pelite = { version = "=0.9.0", optional = true, default-features = false, featur
 abi_stable = { version = "=0.10.3", optional = true }
 once_cell = { version = "^1.9", optional = true }
 
-# we need to stay on goblin 0.7 since this is what h33p's fork uses right now
-goblin = { version = "0.7", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
+goblin = { version = "0.8", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
 serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "^0.8", optional = true }
 
 [dev-dependencies]
 rand = { version = "^0.8.4" }
 rand_xorshift = "^0.3"
-clap = { version = "^4.0.15", features = ["cargo"] }
+# we use clap 4.4 here to stay on rust 1.70.0
+clap = { version = "4.4", features = ["cargo"] }
 simplelog = "^0.12.0"
 rayon = "^1.5.1"
 colored = "^2.0.0"
