--- a/memflow-derive/Cargo.toml
+++ b/memflow-derive/Cargo.toml
@@ -19,9 +19,8 @@ maintenance = { status = "actively-developed" }
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "^1.0"
-syn = "^2.0"
-quote = "^1.0"
-darling = "^0.20"
-proc-macro-crate = "^2.0"
-
+proc-macro2 = "1.0"
+syn = "2.0"
+quote = "1.0"
+darling = "0.20"
+proc-macro-crate = "3.1"
