--- a/memflow-ffi/Cargo.toml
+++ b/memflow-ffi/Cargo.toml
@@ -22,8 +22,8 @@ crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 memflow = { version = "0.2", path = "../memflow" }
-log = "^0.4.14"
-simplelog = "^0.12.0"
+log = "0.4"
+simplelog = "0.12"
 
 [features]
 default = []
