--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -19,36 +19,36 @@ codecov = { repository = "github", branch = "master", service = "github" }
 
 [dependencies]
 memflow-derive = { version = "0.2", path = "../memflow-derive" }
-dataview = { version = "^1.0.0", default-features = false }
-log = { version = "^0.4.14", default-features = false }
+dataview = { version = "1.0", default-features = false }
+log = { version = "0.4", default-features = false }
 # we keep bitflags on version 1.x due to the various issues with cbindgen macro expansion and other issues 
 bitflags = "1.3"
-coarsetime = { version = "^0.1.20", optional = true }
-smallvec = { version = "^1.7.0", default-features = false }
-x86_64 = { version = "0.14.8", default-features = false }
-rand = { version = "^0.8.4", optional = true }
-rand_xorshift = { version = "^0.3", optional = true }
-bumpalo = { version = "^3.11.1", features = ["collections"] }
-no-std-compat = { version = "^0.4.1", features = ["alloc"] }
-itertools = { version = "^0.12.0", default-features = false }
-memmap = { version = "^0.7.0", optional = true }
-hashbrown = "^0.14"
-fixed-slice-vec = "^0.10.0"
+coarsetime = { version = "0.1", optional = true }
+smallvec = { version = "1.13", default-features = false }
+x86_64 = { version = "0.14", default-features = false }
+rand = { version = "0.8", optional = true }
+rand_xorshift = { version = "0.3", optional = true }
+bumpalo = { version = "3.15", features = ["collections"] }
+no-std-compat = { version = "0.4", features = ["alloc"] }
+itertools = { version = "0.12", default-features = false }
+memmap = { version = "0.7", optional = true }
+hashbrown = "0.14"
+fixed-slice-vec = "0.10"
 cglue = { version = ">=0.2.10", default-features = false }
-rangemap = "^1.0"
+rangemap = "1.5"
 
 # plugins
-libloading = { version = "^0.8.1", optional = true }
-dirs = { version = "^5.0.1", optional = true }
+libloading = { version = "0.8", optional = true }
+dirs = { version = "5.0", optional = true }
 # enable unsafe_alignment for now, this is UB, but the idea is to fix pelite in upstream
 pelite = { version = "=0.9.0", optional = true, default-features = false, features = ["unsafe_alignment"] }
 # we pin abi_stable to prevent abi incompatabilities by different versions
 abi_stable = { version = "=0.10.3", optional = true }
-once_cell = { version = "^1.9", optional = true }
+once_cell = { version = "1.19", optional = true }
 
 goblin = { version = "0.8", optional = true, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64"] }
-serde = { version = "^1.0.133", optional = true, default-features = false, features = ["derive", "alloc"] }
-toml = { version = "^0.8", optional = true }
+serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
+toml = { version = "0.8", optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8" }
