--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -50,6 +50,10 @@ goblin = { version = "0.8", optional = true, features = ["pe32", "pe64", "elf32"
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
 toml = { version = "0.8", optional = true }
 
+# plugin analyzer
+num-traits = { version = "0.2", optional = true }
+constcat = { version = "0.5", optional = true }
+
 [dev-dependencies]
 rand = { version = "0.8" }
 rand_xorshift = "0.3"
@@ -65,7 +69,7 @@ dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
 memmapfiles = ["toml", "serde_derive"]
-plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell"]
+plugins = ["libloading", "dirs", "goblin", "os_helpers", "abi_stable", "cglue/layout_checks", "log/std", "once_cell", "num-traits", "constcat"]
 filemap = ["memmap"]
 64_bit_mem = []
 os_helpers = ["goblin", "pelite"]
