--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,8 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-        lfs: true
+        with:
+          lfs: true
       - name: Install rust 1.74.0
         uses: actions-rs/toolchain@v1
         with:
@@ -80,7 +81,8 @@ jobs:
         target: [aarch64-unknown-linux-gnu, i686-unknown-linux-gnu]
     steps:
       - uses: actions/checkout@v4
-        lfs: true
+        with:
+          lfs: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly # currently required due to -Zdoctest-xcompile
