Fixed feature flags and updated no-std example to not use uefi

--- a/memflow/Cargo.toml
+++ b/memflow/Cargo.toml
@@ -69,7 +69,7 @@ colored = "2.0"
 
 [features]
 default = ["std", "serde_derive", "plugins", "os_helpers", "filemap", "memmapfiles", "64_bit_mem"]
-#trace_mmu = [] # enables debug traces in the mmu (very verbose)
+trace_mmu = [] # enables debug traces in the mmu (very verbose)
 dummy_mem = ["rand", "rand_xorshift"]
 std = ["coarsetime", "no-std-compat/std", "cglue/std"]
 serde_derive = ["serde", "cglue/serde"]
