--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,24 +133,25 @@ jobs:
       - name: Build c++ examples
         run: cd memflow-ffi/examples/cpp; make all
 
-  build-nostd:
+  test-nostd:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Rust nightly
+      - name: Install rust 1.74.0
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
-          toolchain: nightly-2023-12-15
+          toolchain: 1.74.0
           override: true
-      - run: rustup toolchain install nightly-2023-12-15
-      - run: rustup +nightly-2023-12-15 component add rust-src
-      - name: Build no_std crate
-        run: cd nostd-test; cargo +nightly-2023-12-15 build --all-features --verbose
 
+      - name: Build
+        run: cd nostd-test; cargo build --workspace ${{ matrix.flags }} --verbose
+
+      - name: Run
+        run: cd nostd-test; cargo run --workspace ${{ matrix.flags }} --verbose
+  
   build-coverage:
     runs-on: ubuntu-latest
     steps:
